Another ch1 tweak

--- a/latex/ch1.tex
+++ b/latex/ch1.tex
@@ -58,19 +58,19 @@ Building on the Gabor transform (or STFT), and using the Constant-Q Transform as
 
 \subsection{Thesis objectives and related work}
 
-The objective of this thesis is to use the sliCQT instead of the STFT for music demixing.
+\hlblu{STFT-based music demixing techniques may be limited by the fixed time-frequency resolution of the STFT. The objective of this thesis is to replace the STFT in a music demixing model with the sliCQT, which has a varying time-frequency resolution. Open-Unmix} \parencite{umx} \hlblu{is a state-of-the-art deep neural network for music demixing based on the STFT, with an open-source reference implementation}.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} \hlblu{The goal of this thesis is to adapt Open-Unmix to create a usable music demixing software application based on the sliCQT.}
 
-Several music demixing papers \parencite{fitzgerald1, driedger, tftradeoff1, tftradeoff2} describe the use of different window sizes of the STFT to improve source separation performance. In contrast, using the NSGT instead of the STFT may be of interest, as it is a single transform which can replace the need to explicitly trade-off of time and frequency resolution.
+Several music demixing papers \parencite{fitzgerald1, driedger, tftradeoff1, tftradeoff2} describe the use of different window sizes of the STFT to improve source separation performance. By contrast, using the NSGT instead of the STFT may be of interest, as it is a single transform which can replace the need to explicitly trade-off of time and frequency resolution.
 
-Other music demixing systems have been proposed that use the CQT instead of the STFT \parencite{fitzgerald2, cqtseparation, bettermusicsep}. However, these papers used implementations of the CQT which lacked a stable inverse \parencite{lackinverse}, and for which different approximate inversion schemes have been proposed \parencite{klapuricqt, fitzgeraldcqt}. The NSGT is a generalization of the CQT, and can be used to construct a CQT with perfect inverse, or CQ-NSGT \parencite{invertiblecqt, variableq1}. The sliCQ Transform (sliCQT), whose name means \textit{sliced Constant-Q transform}, was introduced by \textcite{slicq} to compute the NSGT on slices of the audio signal instead of the entire signal, allowing realtime processing. The NSGT and sliCQT can in practice be constructed with any frequency scale that is monotonically increasing, and can use frequency scales that are appropriate for the \hlblu{task, for example}, musical or psychoacoustic scales. Additionally, the NSGT and sliCQT have open-source reference implementations in MATLAB\footnote{\url{http://ltfat.org/doc/filterbank/cqt_code.html}} and Python,\footnote{\url{https://github.com/grrrr/nsgt}} allowing for reproducibility and further research.
+Other music demixing systems have been proposed that use the CQT instead of the STFT \parencite{fitzgerald2, cqtseparation, bettermusicsep}. However, these papers used implementations of the CQT which lacked a stable inverse \parencite{lackinverse}, and for which different approximate inversion schemes have been proposed \parencite{klapuricqt, fitzgeraldcqt}. The NSGT is a generalization of the CQT, and can be used to construct a CQT with perfect inverse, or CQ-NSGT \parencite{invertiblecqt, variableq1}.
 
-Open-Unmix \parencite{umx} is a state-of-the-art deep neural network for music demixing based on the STFT. The reference implementation is published as fully open-source software\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} with the intention of encouraging further music demixing research. The objective of this thesis is to adapt Open-Unmix to use the sliCQT instead of the STFT. The goal is to present a \hlblu{usable} music demixing \hlblu{software} application with the sliCQT.
+The sliCQ Transform (sliCQT), whose name means \textit{sliced Constant-Q transform}, was introduced by \textcite{slicq} to compute the NSGT on slices of the audio signal instead of the entire signal, allowing realtime processing. The NSGT and sliCQT can in practice be constructed with any frequency scale that is monotonically increasing, and can use frequency scales that are appropriate for the \hlblu{task, for example}, musical or psychoacoustic scales. Additionally, the NSGT and sliCQT have open-source reference implementations in MATLAB\footnote{\url{http://ltfat.org/doc/filterbank/cqt_code.html}} and Python,\footnote{\url{https://github.com/grrrr/nsgt}} allowing for reproducibility and further research.
 
 \subsection{Contribution and results}
 
 My first contribution in this thesis is the adaptation of the reference Python NSGT and sliCQT library\footnote{\url{https://github.com/grrrr/nsgt}} to use PyTorch,\footnote{\url{https://pytorch.org}} a modern deep learning framework with graphical processing unit (GPU) support. This allows the NSGT and sliCQT to be computed on the GPU, which, due to its capabilities for parallel computing, is the preferred device on which to train deep neural networks \parencite{pytorch}. The resulting library, which I released as open-source software,\footnote{\url{https://github.com/sevagh/nsgt}} allows future researchers to use the NSGT and sliCQT in any GPU-based machine learning or deep learning model.
 
-My second contribution in this thesis is the adaptation of Open-Unmix, a deep neural network for music demixing\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} \parencite{umx}, to replace the \hlblu{STFT with sliCQT}. Ideas were also incorporated from CrossNet-Open-Unmix \parencite{xumx}, which is a variant of Open-Unmix, and the Convolutional Denoising Autoencoder \parencite{plumbley1}, a different deep neural network for music demixing. The final result, named xumx-sliCQ,\footnote{\url{https://github.com/sevagh/xumx-sliCQ/tree/main}} is a neural network \hlblu{that} performs the task of music demixing using the sliCQT.
+My second contribution in this thesis is the adaptation of Open-Unmix, a deep neural network for music demixing\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} \parencite{umx}, to replace the \hlblu{STFT with the sliCQT}. Ideas were also incorporated from CrossNet-Open-Unmix \parencite{xumx}, which is a variant of Open-Unmix, and the Convolutional Denoising Autoencoder \parencite{plumbley1}, a different deep neural network for music demixing. The final result, named xumx-sliCQ,\footnote{\url{https://github.com/sevagh/xumx-sliCQ/tree/main}} is a neural network \hlblu{that} performs the task of music demixing using the sliCQT.
 
 \subsection{Outline}
 
